2006-02-20  Christian Jul Jensen  <christian@jul.net>

	* Added TemplaVoila support
	* Fixed reject functionality
	* Fixed access check for viewing tasks

2006-02-18  Mads Chr. Olesen  <shiyee@shiyee.dk>

	* Localized more strings
	* Fixed a couple of issues

2006-02-08  Christian Jul Jensen  <christian@jul.net>

	* added  possibility to observe workflows and be notified by email about changes
	* started fixing reject functionality has som buggy side-effects though

2006-01-18  Christian Jul Jensen  <christian@jul.net>

	* added deletion by workflow + other stuff :)

2006-01-09  Christian Jul Jensen  <christian@jul.net>

	* Added observing of tasks

2005-12-21  Christian Jul Jensen  <christian@jul.net>

	* Added support for notifications

2005-11-07  Christian Jul Jensen  <christian@jul.net>

	* Merged sys_todos into sys_workflows, so they no longer depend on eachother, also I moved the development from 3.8 to 3.9-dev

2005-11-03  Christian Jul Jensen  <christian@jul.net>

	* Back to updating CVS

2005-06-28  Christian Jul Jensen  <christian@jul.net>

 * first big part of refactoring
