@@ -1,3 +1,7 @@
+2006-03-22  Christian Jul Jensen  <christian@jul.net>
+
+	* Fixed issue with wrong relations to creating groups
+
 2006-02-20  Christian Jul Jensen  <christian@jul.net>
 
 	* Added TemplaVoila support
